--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,8 @@
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "typescript": "^5.8.2",
-    "undici-types": "^6.20.0"
+    "undici-types": "^6.20.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
