--- a/server/package.json
+++ b/server/package.json
@@ -8,13 +8,13 @@
     "cors": "^2.8.5",
     "cron": "^4.1.0",
     "express": "^4.21.2",
+    "mailersend": "^2.3.0",
     "node-cron": "^3.0.3",
     "typescript": "^5.8.2",
     "undici-types": "^6.20.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@sendgrid/mail": "^8.1.4",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/node-cron": "^3.0.11",
