--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "bun-types": "^1.2.4",
     "cors": "^2.8.5",
     "cron": "^4.1.0",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mailersend": "^2.3.0",
     "node-cron": "^3.0.3",
